--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -86,7 +86,7 @@ jobs:
   kind-ipv6:
     runs-on: ubuntu-latest
     env:
-      KUBERNETES_VERSION: ${{ secrets.NSM_KUBERNETES_VERSION }}
+      KUBERNETES_VERSION: ${{ vars.NSM_KUBERNETES_VERSION }}
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.0
@@ -103,7 +103,7 @@ jobs:
           echo $GITHUB_WORKSPACE/bin >> $GITHUB_PATH
           echo "kube $KUBERNETES_VERSION"
           echo "kube ${{ env.KUBERNETES_VERSION }}"
-          echo "kube ${{ secrets.NSM_KUBERNETES_VERSION }}"
+          echo "kube ${{ vars.NSM_KUBERNETES_VERSION }}"
       - uses: actions/checkout@v2
         with:
           path: ${{ github.workspace }}/src/github.com/${{ github.repository }}
@@ -111,7 +111,7 @@ jobs:
         with:
           config: src/github.com/${{ github.repository }}/cluster-config-ipv6.yaml
           version: v0.13.0
-          image: kindest/node:${{ secrets.NSM_KUBERNETES_VERSION }}
+          image: kindest/node:${{ vars.NSM_KUBERNETES_VERSION }}
       - name: Check kind cluster
         run: |
           kubectl version
@@ -126,7 +126,7 @@ jobs:
           ./tests_single/basic_test.go \
           ./tests_single/memory_test.go -parallel 4
         env:
-          ARTIFACTS_DIR: ipv6-logs/${{ secrets.NSM_KUBERNETES_VERSION }}
+          ARTIFACTS_DIR: ipv6-logs/${{ vars.NSM_KUBERNETES_VERSION }}
         working-directory: ${{ github.workspace }}/src/github.com/${{ github.repository }}
       - name: Upload artifacts
         if: ${{ success() || failure() || cancelled() }}
@@ -159,7 +159,7 @@ jobs:
         with:
           config: src/github.com/${{ github.repository }}/cluster-config.yaml
           version: v0.13.0
-          image: kindest/node:${{ secrets.NSM_KUBERNETES_VERSION  }}
+          image: kindest/node:${{ vars.NSM_KUBERNETES_VERSION  }}
       - name: Check kind cluster
         run: |
           kubectl version
@@ -169,7 +169,7 @@ jobs:
         run: |
           go test -count 1 -timeout 1h -race -v ./tests_afxdp -parallel 4
         env:
-          ARTIFACTS_DIR: afxdp-logs/${{ secrets.NSM_KUBERNETES_VERSION }}
+          ARTIFACTS_DIR: afxdp-logs/${{ vars.NSM_KUBERNETES_VERSION }}
         working-directory: ${{ github.workspace }}/src/github.com/${{ github.repository }}
       - name: Upload artifacts
         if: ${{ success() || failure() || cancelled() }}
@@ -202,7 +202,7 @@ jobs:
         with:
           config: src/github.com/${{ github.repository }}/cluster-config-calico.yaml
           version: v0.11.1
-          image: kindest/node:${{ secrets.NSM_KUBERNETES_VERSION }}
+          image: kindest/node:${{ vars.NSM_KUBERNETES_VERSION }}
           wait: 0s
       - name: Setup external CNI plugin
         shell: bash {0}
@@ -238,7 +238,7 @@ jobs:
           ./tests_single/feature_test.go           \
           -calico -parallel 4
         env:
-          ARTIFACTS_DIR: calico-logs/${{ secrets.NSM_KUBERNETES_VERSION }}
+          ARTIFACTS_DIR: calico-logs/${{ vars.NSM_KUBERNETES_VERSION }}
         working-directory: ${{ github.workspace }}/src/github.com/${{ github.repository }}
       - name: Upload artifacts
         if: ${{ success() || failure() || cancelled() }}
@@ -271,7 +271,7 @@ jobs:
         with:
           config: src/github.com/${{ github.repository }}/cluster-config.yaml
           version: v0.20.0
-          image: kindest/node:${{ secrets.NSM_KUBERNETES_VERSION }}
+          image: kindest/node:${{ vars.NSM_KUBERNETES_VERSION }}
       - name: Check kind cluster
         run: |
           kubectl version
@@ -281,7 +281,7 @@ jobs:
         run: |
           go test -count 1 -timeout 1h -race -v ./tests_heal_ext -parallel 4
         env:
-          ARTIFACTS_DIR: heal-ext-logs/${{ secrets.NSM_KUBERNETES_VERSION }}
+          ARTIFACTS_DIR: heal-ext-logs/${{ vars.NSM_KUBERNETES_VERSION }}
         working-directory: ${{ github.workspace }}/src/github.com/${{ github.repository }}
       - name: Upload artifacts
         if: ${{ success() || failure() || cancelled() }}
@@ -321,7 +321,7 @@ jobs:
       - name: Create kind clusters
         run: |
           for (( i = 1; i <= 3; i++ )); do
-              kind create cluster --name "kind-${i}" --config cluster-config-interdomain.yaml --image="kindest/node:{{ secrets.NSM_KUBERNETES_VERSION }}"
+              kind create cluster --name "kind-${i}" --config cluster-config-interdomain.yaml --image="kindest/node:{{ vars.NSM_KUBERNETES_VERSION }}"
               configPath=${{ github.workspace }}/src/github.com/${{ github.repository }}/config${i}
               kind get kubeconfig --name "kind-${i}" > ${configPath}
               echo KUBECONFIG${i}=${configPath} >> $GITHUB_ENV
