--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,10 @@ on:
   push:
     branches:
       - 'release/**'
+
+env:
+  KIND_VERSION: v0.22.0
+
 jobs:
   yamllint:
     uses: networkservicemesh/.github/.github/workflows/yamllint.yaml@main
@@ -56,7 +60,7 @@ jobs:
       - uses: engineerd/setup-kind@v0.5.0
         with:
           config: src/github.com/${{ github.repository }}/cluster-config.yaml
-          version: v0.22.0
+          version: ${{ env.KIND_VERSION }}
           image: kindest/node:${{ matrix.image }}
       - name: Check kind cluster
         run: |
@@ -99,14 +103,13 @@ jobs:
           echo GOPATH=$GITHUB_WORKSPACE >> $GITHUB_ENV
           echo GO111MODULE=on >> $GITHUB_ENV
           echo $GITHUB_WORKSPACE/bin >> $GITHUB_PATH
-          echo "kube ${{ vars.NSM_KUBERNETES_VERSION }}"
       - uses: actions/checkout@v2
         with:
           path: ${{ github.workspace }}/src/github.com/${{ github.repository }}
       - uses: engineerd/setup-kind@v0.5.0
         with:
           config: src/github.com/${{ github.repository }}/cluster-config-ipv6.yaml
-          version: v0.22.0
+          version: ${{ env.KIND_VERSION }}
           image: kindest/node:${{ vars.NSM_KUBERNETES_VERSION }}
       - name: Check kind cluster
         run: |
@@ -154,7 +157,7 @@ jobs:
       - uses: engineerd/setup-kind@v0.5.0
         with:
           config: src/github.com/${{ github.repository }}/cluster-config.yaml
-          version: v0.22.0
+          version: ${{ env.KIND_VERSION }}
           image: kindest/node:${{ vars.NSM_KUBERNETES_VERSION  }}
       - name: Check kind cluster
         run: |
@@ -197,7 +200,7 @@ jobs:
       - uses: engineerd/setup-kind@v0.5.0
         with:
           config: src/github.com/${{ github.repository }}/cluster-config-calico.yaml
-          version: v0.22.0
+          version: ${{ env.KIND_VERSION }}
           image: kindest/node:${{ vars.NSM_KUBERNETES_VERSION }}
           wait: 0s
       - name: Setup external CNI plugin
@@ -266,7 +269,7 @@ jobs:
       - uses: engineerd/setup-kind@v0.5.0
         with:
           config: src/github.com/${{ github.repository }}/cluster-config.yaml
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           image: kindest/node:${{ vars.NSM_KUBERNETES_VERSION }}
       - name: Check kind cluster
         run: |
@@ -313,7 +316,7 @@ jobs:
         with:
           path: ${{ github.workspace }}/src/github.com/${{ github.repository }}
       - name: Get kind
-        run: go install sigs.k8s.io/kind@v0.22.0
+        run: go install sigs.k8s.io/kind@${{ env.KIND_VERSION }}
       - name: Create kind clusters
         run: |
           for (( i = 1; i <= 3; i++ )); do
